# pace-humanoid

scripts/: list_envs.py
scripts/pace/: data_collection.py  data_plot.py  fit.py  plot_trajectory.py  test.py
scripts/rsl_rl/: play.py  train.py
source/pace_sim2real/pace_sim2real/optim/: cma_es.py
source/pace_sim2real/pace_sim2real/tasks/: __init__.py
source/pace_sim2real/pace_sim2real/tasks/manager_based/: __init__.py
source/pace_sim2real/pace_sim2real/tasks/manager_based/pace/: G1_CFG.py  anymal_pace_env_cfg.py  g1_pace_env_cfg.py  pace_sim2real_env_cfg.py
source/policy_train/: pyproject.toml
source/policy_train/src/policy_train/: __init__.py
source/policy_train/src/policy_train/config/: __init__.py  extension.toml  g1_env_cfg.py  g1_param_set.py  g1_ppo_cfg.py
source/policy_train/src/policy_train/mdp/: rewards.py
